force-app/zurich-sdm-app/main/default/objects/SDMAccountContactRelation__mdt/SDMAccountContactRelation__mdt.object-meta.xml
<CustomObject>
    <description>SDM: Configuracion para la relacion de roles de Account Contact Realtion y campos de mediador (account)</description>
    <label>SDMAccountContactRelation</label>
    <pluralLabel>SDMAccountContactRelations</pluralLabel>
</CustomObject>