force-app/zurich-sdm-app/main/default/objects/SDMAccountContactRelation__mdt/fields/IntermediaryField__c.field-meta.xml
<CustomField>
    <fullName>IntermediaryField__c</fullName>
    <description>SDM: the name of the field in the account sobject (intermediary)</description>
    <label>Intermediary Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>