force-app/zurich-sdm-app/main/default/objects/SDMAccountContactRelation__mdt/fields/NameText__c.field-meta.xml
<CustomField>
    <fullName>NameText__c</fullName>
    <description>SDM: the first part for the name of the contact if created</description>
    <label>Texto de nombre</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>