force-app/zurich-sdm-app/main/default/objects/SDMAccountContactRelation__mdt/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <description>SDM: nombre del rol en los Account Contact Relation</description>
    <label>Role</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Main</fullName>
                <default>true</default>
                <label>Principal</label>
            </value>
            <value>
                <fullName>Claim</fullName>
                <label>Siniestros</label>
            </value>
            <value>
                <fullName>Administration</fullName>
                <label>Administracion</label>
            </value>
            <value>
                <fullName>Subscription</fullName>
                <label>Contratacion</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>